Use Integer.valueOf() instead of new Integer()
Fixes a deprecation warning.